@@ -554,11 +554,9 @@ Grouped in options:\
 [Börsen-Zeitung](https://www.boersen-zeitung.de) -
 [Cicero](https://www.cicero.de) -
 [Der Spiegel (link to archive.is)](https://www.spiegel.de) -
-[Der Tagesspiegel (link to archive.is)](https://www.tagesspiegel.de) -
 [Die Zeit (link to archive.is)](https://www.zeit.de) -
 [Frankfurter Allgemeine Zeitung](https://www.faz.net) -
 [Freie Presse](https://www.freiepresse.de) -
-[Golem.de (link to archive.is)](https://www.golem.de) -
 [Jacobin Magazin](https://jacobin.de) -
 [Kölner Stadt-Anzeiger](https://www.ksta.de) -
 [Kölnische Rundschau](https://www.rundschau-online.de) -
