@@ -260,7 +260,6 @@
     "*://*.globes.co.il/*",
     "*://*.globo.com/*",
     "*://*.goldcoastbulletin.com.au/*",
-    "*://*.golem.de/*",
     "*://*.goodhousekeeping.com/*",
     "*://*.gooieneemlander.nl/*",
     "*://*.gq.com/*",
@@ -588,7 +587,6 @@
     "*://*.suomensotilas.fi/*",
     "*://*.svz.de/*",
     "*://*.syracuse.com/*",
-    "*://*.tagesspiegel.de/*",
     "*://*.tampabay.com/*",
     "*://*.techinasia.com/*",
     "*://*.technologyreview.com/*",
